# embedded-std

./: .gitignore  CMakeLists.txt  README.md
src/: abort.h  algorithm.h  array.h  fixed_list.h  intrusive_list.h  type.h  type_traits.h  utility.h
tests/: CMakeLists.txt  array_test.cpp  fixed_list_test.cpp  intrusive_list_test.cpp
